--- a/css/facehandsfeet.css
+++ b/css/facehandsfeet.css
@@ -11,20 +11,50 @@ a{
 	text-decoration: none;
 	padding: 0 9px;
 }
-	#content{
+	.content{
 		margin: 0 auto;
 		width: 640px;
 		background-color: #fff;
 		padding: 18px;
 		border-radius: 2px;
 	}
-		#content h1{
+		.content h1{
 			height: 233px;
 			background: transparent url(/img/lurgur.png) top left no-repeat;
 			text-indent: -20000px;
 		}
-		#content p{
+		.content p{
 			font-size: 36px;
 			line-height: 54px;
 			text-align: center;
 		}
+table{
+	border: 0;
+	border-spacing: 0;
+}
+	thead tr{
+		background-color: #9EAD5B;
+		color: #fff;
+	}
+	thead th,
+	tbody td{
+		padding: 6px;
+	}
+		thead th.title{
+			width: 50%;
+			font-size: 36px;
+			text-align: left;
+		}
+		thead th.price{
+			width: 25%;
+			font-size: 12px;
+			line-height: 12px;
+			text-transform: uppercase;
+		}
+	tbody td.price{
+		text-align: center;
+	}
+	tbody tr:nth-of-type(even){
+		background-color: #fafafa;
+	}
+	
