--- a/css/facehandsfeet.css
+++ b/css/facehandsfeet.css
@@ -5,45 +5,112 @@ body {
 	line-height: 28px;
 }
 a{
-	background-color: #000;
+	background-color: #9EAD5B;
 	color: #fff;
 	font-weight: 800;
 	text-decoration: none;
-	padding: 0 9px;
+	padding: 0 6px;
+	-webkit-transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	-ms-transition: all 0.2s ease-in-out;
 }
 	.content{
 		margin: 0 auto;
 		width: 640px;
 		background-color: #fff;
 		padding: 18px;
-		border-radius: 2px;
+		border-radius: 3px;
+		border: 1px solid rgba(50,50,50, 0.5);
+		-webkit-box-shadow: 0 0 10px rgba(0,0,0, 0.3);
+		-moz-box-shadow: 0 0 10px rgba(0,0,0, 0.3);
+		-ms-box-shadow: 0 0 10px rgba(0,0,0, 0.3);
+		-o-box-shadow: 0 0 10px rgba(0,0,0, 0.3);
 	}
 		.content h1{
+			margin-top: 0;
 			height: 233px;
 			background: transparent url(/img/lurgur.png) top left no-repeat;
 			text-indent: -20000px;
 		}
 		.content p{
-			font-size: 36px;
-			line-height: 54px;
+			font-size: 24px;
+			line-height: 32px;
 			text-align: center;
 		}
+
+form{
+	padding-top: 6px;
+	background-color: #000;
+	margin-bottom: 32px;
+	border-radius: 3px;
+	text-align: center;
+}
+	form input,
+	form button{
+		padding: 6px;
+		border-radius: 2px;
+		font-family: 'Podkova', serif;
+		font-size: 16px;
+		border: 0 none;
+		border-radius: 2px;
+		outline: none;
+		display: block-inline;
+		font-weight: 600;
+	}
+
+	form input{
+		margin: 16px;
+		width: 400px;
+	}
+	form button{
+		border-radius: 3px;
+		background-color: #9EAD5B;
+		border: 0 none;
+		outline: none;
+		width: 140px;
+		cursor: pointer;
+		-webkit-box-shadow: inset 0 0 1px #fff;
+		color: #fff;
+		-webkit-transition: all 0.2s ease-in-out;
+		-moz-transition: all 0.2s ease-in-out;
+		-o-transition: all 0.2s ease-in-out;
+		-ms-transition: all 0.2s ease-in-out;
+	}
+	
+	form label{
+		margin-top: 12px;
+		color: #fff;
+	}
+	
+		form button:hover,
+		a:hover{
+			background: #C5D16A;
+			color: #000;
+		}
+
+
+	
 table{
 	border: 0;
 	border-spacing: 0;
+	width: 100%;
+	margin-bottom: 36px;
 }
 	thead tr{
 		background-color: #9EAD5B;
 		color: #fff;
 	}
+
 	thead th,
 	tbody td{
-		padding: 6px;
+		padding: 12px;
 	}
 		thead th.title{
 			width: 50%;
 			font-size: 36px;
 			text-align: left;
+			text-shadow: rgba(0,0,0, 0.2);
 		}
 		thead th.price{
 			width: 25%;
@@ -51,10 +118,24 @@ table{
 			line-height: 12px;
 			text-transform: uppercase;
 		}
+	
 	tbody td.price{
 		text-align: center;
 	}
+	
 	tbody tr:nth-of-type(even){
 		background-color: #fafafa;
 	}
-	
+
+
+footer{
+	background-color: #000;
+	padding: 32px;
+	margin: 32px -18px -18px -18px;
+	text-align: center;
+}
+	footer p{
+		color: #fff;
+		margin: 0;
+		padding: 0;
+	}
